--- a/services/server/views/index.pug
+++ b/services/server/views/index.pug
@@ -6,6 +6,4 @@ html(lang="en")
         title Demo
     body
         div#root
-        script(type="text/javascript", src="http://localhost:8080/static/bundle.js")
-        script(type="text/javascript", src="/js/vendors.js")
-        script(type="text/javascript", src="/js/index.js")
+        script(type="text/javascript", src="http://0.0.0.0:8080/static/bundle.js")
